# bazel-playground

./: .bazeliskrc  .bazelrc  .gitignore  .markdown_link_check_config.json  .pre-commit-config.yaml  .yamllint.yaml  BUILD.bazel  README.md  WORKSPACE.bazel  buildbuddy_credential_helper  requirements.txt  requirements_lock.txt  run  tasks.yaml
.github/workflows/: run-tasks.yaml
cc/: BUILD.bazel  pub.c  pub.cpp  pub.hpp  sub.c  sub.cpp  sub.hpp
cc/idl/: README.md
cc/test/integration/: cc_integration_test.cpp  sh_integration_test.sh  test_c_pub_sub.py  test_cpp_pub_sub.py
cc/test/unit/: pub_sub_test.cpp
external_bazel_templates/: BUILD.bazel.cyclonedds
pkg/: pkg_vars.bzl
python/: add_two_ints.py  pub.py  sub.py
python/test/: test_add_two_ints.py
python/test/integration/: __init__.py  test_pub_sub.py
