# By default ccInfo functions have been included
cc_library(
    name = "c_idl",
    srcs = [
        "idl/HelloWorldData.h",
        "idl/HelloWorldData.c",
    ],
    deps = ["@cyclonedds"],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "c_pub",
    srcs = ["pub.c"],
    deps = [":c_idl"],
)

cc_binary(
    name = "c_sub",
    srcs = ["sub.c"],
    deps = [":c_idl"],
)


load("@python_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")
py_test(
    name = "integration-tests",
    srcs = glob(["test/integration/**"]),
    deps = [
        requirement("pytest"),
        requirement("pytest-timeout"),
        requirement("docker"),
    ],
    data= [
        ":c_sub",
        ":c_pub",
    ],
    tags = ["no-coverage"],
    main = "__init__.py",
    visibility = ["//visibility:public"],

)
