# By default ccInfo functions have been included
cc_library(
    name = "c_idl",
    srcs = [
        "idl/HelloWorldData.h",
        "idl/HelloWorldData.c",
    ],
    deps = ["@cyclonedds"],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "c_pub",
    srcs = ["pub.c"],
    deps = [":c_idl"],
)

cc_binary(
    name = "c_sub",
    srcs = ["sub.c"],
    deps = [":c_idl"],
)

## C++
cc_library(
    name = "cc_idl",
    srcs = [
        "idl/HelloWorldData.hpp",
        "idl/HelloWorldData.cpp",
    ],
    deps = ["@cyclonedds-cxx"],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "cc_pub",
    srcs = ["pub.cpp", "pub.hpp"],
    deps = [":cc_idl"],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "cc_sub",
    srcs = ["sub.cpp", "sub.hpp"],
    deps = [":cc_idl"],
    visibility = ["//visibility:public"],
)

# Integration Test
load("@python_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")

py_test(
    name = "py-integration-tests",
    srcs = glob(["test/integration/*.py"]),
    deps = [
        requirement("pytest"),
        requirement("pytest-timeout"),
        requirement("docker"),
    ],
    data= [
        ":c_sub",
        ":c_pub",
        ":cc_pub",
        ":cc_sub",
    ],
    tags = ["no-coverage"],
    main = "__init__.py",
    visibility = ["//visibility:public"],

)

# https://bazel.build/versions/6.5.0/reference/be/shell#sh_test
sh_test(
    name = "sh-integration-tests",
    srcs = ["test/integration/sh_integration_test.sh"],
    data = [
        ":c_idl",
        ":cc_idl",
        ":c_sub",
        ":c_pub",
        ":cc_pub",
        ":cc_sub",
    ],
    args = ["5"], # 10 seconds timeout
    deps = ["@bazel_tools//tools/bash/runfiles"],
    visibility = ["//visibility:public"], # bazel utils that required to run the test
)

cc_test(
    name = "cc-integration-tests",
    srcs = glob(["test/integration/*.cpp"]),
    data = [
        ":c_idl",
        ":cc_idl",
        ":c_sub",
        ":c_pub",
        ":cc_pub",
        ":cc_sub",
    ],
    deps = [
        "@bazel_tools//tools/cpp/runfiles",
        "@googletest//:gtest_main",
    ],
    visibility = ["//visibility:public"],
)


# Unit Test
cc_library(
    name = "cc_sub_lib",
    hdrs = ["sub.hpp"],
    deps = [
        "cc_idl",
        "@cyclonedds-cxx"
    ],
    # testonly = True,
    visibility = ["//visibility:private"],
)

cc_library(
    name = "cc_pub_lib",
    hdrs = ["pub.hpp"],
    deps = [
        "cc_idl",
        "@cyclonedds-cxx"
    ],
    # testonly = True,
    visibility = ["//visibility:private"],
)

cc_test(
    name = "cc-unit-tests",
    srcs = glob(["test/unit/*.cpp"]),
    deps = [
        "cc_idl",
        "cc_sub_lib",
        "cc_pub_lib",
        "@googletest//:gtest_main",
    ],
    visibility = ["//visibility:public"],
)
